update java to 25 and spring to 4